Fix alignment of items in reorder modal [SCI-6995]

--- a/app/assets/stylesheets/steps/step.scss
+++ b/app/assets/stylesheets/steps/step.scss
@@ -308,6 +308,7 @@
   }
 
   .step-element-header {
+    align-items: center;
     border-bottom: 1px solid $color-concrete;
 
     &:hover:not(.locked) {
